--- a/HelloWorld/app/src/main/res/layout/activity_main.xml
+++ b/HelloWorld/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonStart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -23,16 +23,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/buttonStop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="139dp"
+        android:layout_marginTop="440dp"
+        android:layout_marginEnd="139dp"
+        android:text="@string/stop_timer_btn"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textStyle="bold|italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="192dp"
         android:layout_marginTop="292dp"
         android:layout_marginEnd="197dp"
-        android:text="0"
+        android:text="@string/no_secs"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
